@@ -24,7 +24,6 @@ typedef struct
     int port_back;
     int reserveIY;
     int dump_graphs;
-    int optralloc_remat;
     int oldralloc;
   }
 Z80_OPTS;
@@ -38,7 +37,7 @@ extern Z80_OPTS z80_opts;
 
 #define IY_RESERVED (z80_opts.reserveIY)
 
-#define OPTRALLOC_REMAT (z80_opts.optralloc_remat)
+#define OPTRALLOC_REMAT (IS_Z80 || IS_Z180 || IS_R2K) /* Enable rematerialization in the new allocator for the ports with exact cost function */
 #define OPTRALLOC_EXACT_COST (!IS_GB) // Todo: Implement exact cost for gbz80.
 #define OPTRALLOC_HL (!IS_GB)
 #define OPTRALLOC_A 1
